# C-and-C-plus-plus

./: .gitignore  .gitmodules  CMakeReadme.md  Install_Manjaro.md  Install_Ubuntu.md  Linux_Shell.md  README.md
Address-Book-System/: CMakeLists.txt  Main.cpp  README.md  config.txt
CMakeClangVcpkg/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  launch.json  main.cpp  tasks.json  vcpkg.json
CMakeExamples/: CMakeLists.txt  LICENSE  study_cmake_build_info.h.in
CMakeExamples/cmake/: BuildInfo.cmake
CMakeExamples/examples/: CMakeLists.txt  README.md
CMakeExamples/packaging/: CMakeLists.txt
CMakeExamples/src/: CMakeLists.txt  main.cpp
CMakeExamples/test/: CMakeLists.txt
CMakePractics/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
CMakePractics/00_Kickstarting_CMake/: CMakeLists.txt
CMakePractics/01_Accessing_CMake_Best_Ways/: CMakeLists.txt
CMakePractics/02_Creating_CMake_Project/: CMakeLists.txt
CMakePractics/04_Integrating_ThirdParty_Libraries_Dependency_Management/: CMakeLists.txt
CMakePractics/07_Executing_Custom_Tasks/: CMakeLists.txt
CMakePractics/08_Reproducible_Build_Environments/: CMakeLists.txt
CMakePractics/09_Handling_Distributed_Superbuild/: CMakeLists.txt
CMakePractics/11_Cross_Platform_Toolchains/: CMakeLists.txt
CMakePractics/12_Reusing_CMake_Code/: CMakeLists.txt
CMakePractics/13_Optimizing_Maintaining/: CMakeLists.txt
CMakeProjectTemplate/: CMakeLists.txt  README.md  cmake_build.sh
CMakeProjectTemplate/src/: CMakeLists.txt  main.cpp
CMakeTutorial/DynamicLibExample/: CMakeLists.txt  main.cpp
CMakeTutorial/GraphvizCMake/: CMakeLists.txt
CMakeTutorial/StaticLibExample/: CMakeLists.txt  main.cpp
CUDA_Programming/: CMakeLists.txt  README.md
CUDA_Programming/01_kernelFunction/: CMakeLists.txt  main.cu
CUDA_Programming/02_multipleThread/: CMakeLists.txt  multiple_thread.cu
CUDA_Programming/03_multipleDimGrid/: CMakeLists.txt  multipleDim_grid.cu
CUDA_Programming/04_CudaPipeline/: CMakeLists.txt  pipeline.cu
CUDA_Programming/05_CudaError/: CMakeLists.txt
CUDA_Programming/06_CudaEventPerformance/: CMakeLists.txt
CUDA_Programming/07_cudaThrust/: CMakeLists.txt
CUDA_Programming/08_cuBLAS/: CMakeLists.txt
CUDA_Programming/09_cuSolver/: CMakeLists.txt
CppImageProcessing/: .clang-format  CMakeConfiguration.txt  CMakeLists.txt  README.md  vcpkg.json
CppImageProcessing/contours/: CMakeLists.txt  bounding_boxes_circles.cpp  bounding_rotated_ellipses.cpp  convex_hull.cpp  finding_contours.cpp  image_moments.cpp  point_polygon.cpp
CppImageProcessing/cuda_opencv/: CMakeLists.txt  metrics.cpp
CppImageProcessing/geometric_drawing/: CMakeLists.txt  filters.cpp  generator.cpp  geometric.cpp
CppImageProcessing/hello_start/: CMakeLists.txt  main.cpp
CppImageProcessing/histograms/: CMakeLists.txt  back_projection.cpp  histogram_calculation.cpp  histogram_comparison.cpp  histogram_equalization.cpp  template_matching.cpp
CppImageProcessing/image_pyramids/: CMakeLists.txt  inRange.cpp  pyramids.cpp  threshold.cpp
CppImageProcessing/image_segmentation/: CMakeLists.txt  anisotropic.cpp  focus_deblur.cpp  motion_deblur.cpp  periodic_noise.cpp  segmentation.cpp
CppImageProcessing/morphology_transformation/: CMakeLists.txt  HitMiss.cpp  erosion_dilation.cpp  extract_pattern.cpp  morphology.cpp
CppImageProcessing/opencv_qt/: CMakeLists.txt  main.cpp  utility.cpp  utility.hpp
CppImageProcessing/transformations/: CMakeLists.txt  affine.cpp  canny.cpp  hough_circle.cpp  hough_line.cpp  laplacian.cpp  linear_filter.cpp  remapping.cpp  sobel.cpp  template_detect.cpp
CppModernCourse/: .gitignore  CMakeLists.txt  README.md
CppModernCourse/00_OvertureCProgrammers/: 00_constexpr.cpp  01_overload.cpp  02_reference.cpp  03_auto.cpp  04_namespace.cpp  05_objectFileIntermingling.cpp  06_expressingConcisely.cpp  07_standardLibrary.cpp  08_lambda.cpp  09_templatesGereric.cpp  10_resourceManagement.cpp  11_ownershipSmartPtrMoveSemantics.cpp  CMakeLists.txt
CppModernCourse/01_UpAndRunning/: 00_firstProgram.cpp  01_warmupExercises.cpp  CMakeLists.txt
CppModernCourse/02_Types/: 00_fundamentalIntegerTypes.cpp  01_fundamentalFloatTypes.cpp  02_fundamentalCharTypes.cpp  03_fundamentalBoolTypes.cpp  04_fundamentalTypes.cpp  05_arrayTypes.cpp  06_userDefinedTypes.cpp  07_ClassTypes.cpp  08_ClassInit.cpp  09_firstExercises.cpp  CMakeLists.txt
CppParallel/: .gitignore  CMakeLists.txt  README.md  build.sh
CppSeries/: .gitignore  CMakeLists.txt  README.md
CudaCourse/: .clang-format  00_HelloCuda.cu  01_ThreadModel.cu  02_MatrixSum.cu  03_CudaErrorCheck.cu  04_RuntimeEvent.cu  05_QueryDeviceInfo.cu  06_OrganizeThreads.cu  07_ResisterMemory.cu  08_GlobalMemory.cu  09_SharedMemory.cu  10_ConstantMemory.cu  11_CacheMemory.cu  12_ReduceCompute.cu  CMakeLists.txt  README.md  utility.cuh
ModernCppProject/: CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  build.sh
OpenGL_Cherno/: CMakeLists.txt  README.md
OpenGL_Learning/: .gitignore  CMakeLists.txt  README.md
QT_Course/: .gitignore  00_dev_env.cpp  01_data_type.cpp  02_signal_slot.cpp  03_timer.cpp  04_fund_widget.cpp  05_layout_widget.cpp  06_right_click.cpp  07_widget_btn.cpp  08_widget_container.cpp  09_event_processor.cpp  10_event_distributor.cpp  11_event_filter.cpp  12_socket_TCP.cpp  13_thread_task.cpp  14_thread_pool.cpp  15_sql_test.cpp  16_database_test.cpp  17_json_test.cpp  18_sine_curve_drawing.cpp  19_login_widget.cpp  20_graph_render.cpp  21_image_render.cpp  CMakeLists.txt  README.md  build.sh  mainwindow.h
QT_SerialDebuggingAssistant/: CMakeLists.txt  README.md  SerialAssistant.cpp  SerialAssistant.h  SerialAssistant.ui  SerialRefresh.cpp  SerialRefresh.h  main.cpp
RenderFromScratch/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
StructParamsJsonConf/: .gitignore  CMakeLists.txt  CameraParamsConf.cpp  CameraParamsConf.hpp  README.md  inicpp.hpp  main.cpp  test_main.cpp
VTK_Learning/: .gitignore  CMakeLists.txt  README.md  VTK_Learning.sln
mnist_MachineLearning/: CMakeLists.txt  build.sh  extract_transform_load.cpp
(+2640 files in other folders)
